# vibe-coding-hackathon-2026-indias-largest-ai-web3-event-hackindia-bumblebee

./: .env.example  .gitignore  README.md  SETUP.md  flow.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  llm.py  main.py  models.py  orchestrator.py  schemas.py  telemetry.py
backend/app/agents/: assistant.py  cast.py  evaluators.py  prompts.py  scenario_engine.py  task_engine.py
backend/scripts/: dump_events.py  scenario_demo.py  ws_smoke.py
backend/tests/: conftest.py  test_artifact_and_assistant.py  test_evaluators.py  test_health.py  test_llm_smoke.py  test_orchestrator.py  test_scenario_engine.py  test_sessions.py  test_ws.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: AIAssistantPanel.tsx  AccessibilityToggle.tsx  AgreementPill.tsx  AppealForm.tsx  BandChip.tsx  ChannelList.tsx  ChatChannel.tsx  ComplianceFooter.tsx  ConfidenceBar.tsx  EvidenceItem.tsx  FormatBadge.tsx  IntegrityContext.tsx  ScoreAxis.tsx  TaskBrief.tsx  TaskRail.tsx  Timer.tsx  TopNav.tsx  WorkSurface.tsx
frontend/src/screens/: BiasDashboard.tsx  Briefing.tsx  Disclosure.tsx  Explanation.tsx  Landing.tsx  Library.tsx  PracticeHub.tsx  RecruiterDashboard.tsx  RecruiterSession.tsx  Rights.tsx  RoleSelect.tsx  Scorecard.tsx  SubProcessors.tsx  Workspace.tsx
frontend/src/state/: store.ts
frontend/src/styles/: global.css  tokens.css
