[project]
name = "dayone-backend"
version = "0.1.0"
description = "Day One backend — AI work-simulation orchestrator"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "live: hits the real Gemini API; counts against your daily free-tier quota. Skip with -m 'not live'.",
]
